[workspace]
members = [
    "rust/examples",
    "rust/lance",
    "rust/lance-arrow",
    "rust/lance-core",
    "rust/lance-datagen",
    "rust/lance-encoding",
    "rust/lance-file",
    "rust/lance-index",
    "rust/lance-io",
    "rust/lance-linalg",
    "rust/lance-namespace",
    "rust/lance-namespace-impls",
    "rust/lance-table",
    "rust/lance-test-macros",
    "rust/lance-testing",
    "rust/lance-tools",
    "rust/compression/fsst",
    "rust/compression/bitpacking",
]
exclude = ["python", "java/lance-jni"]
# Python package needs to be built by maturin.
resolver = "2"


[workspace.package]
version = "0.40.0-beta.2"
edition = "2021"
authors = ["Lance Devs <dev@lancedb.com>"]
license = "Apache-2.0"
repository = "https://github.com/lancedb/lance"
readme = "README.md"
description = "A columnar data format that is 100x faster than Parquet for random access."
keywords = [
    "data-format",
    "data-science",
    "machine-learning",
    "apache-arrow",
    "data-analytics",
]
categories = [
    "database-implementations",
    "data-structures",
    "development-tools",
    "science",
]
rust-version = "1.82.0"

[workspace.dependencies]
libc = "0.2.176"
lance = { version = "=0.40.0-beta.2", path = "./rust/lance" }
lance-arrow = { version = "=0.40.0-beta.2", path = "./rust/lance-arrow" }
lance-core = { version = "=0.40.0-beta.2", path = "./rust/lance-core" }
lance-datafusion = { version = "=0.40.0-beta.2", path = "./rust/lance-datafusion" }
lance-datagen = { version = "=0.40.0-beta.2", path = "./rust/lance-datagen" }
lance-encoding = { version = "=0.40.0-beta.2", path = "./rust/lance-encoding" }
lance-file = { version = "=0.40.0-beta.2", path = "./rust/lance-file" }
lance-index = { version = "=0.40.0-beta.2", path = "./rust/lance-index" }
lance-io = { version = "=0.40.0-beta.2", path = "./rust/lance-io", default-features = false }
lance-linalg = { version = "=0.40.0-beta.2", path = "./rust/lance-linalg" }
lance-namespace = { version = "=0.40.0-beta.2", path = "./rust/lance-namespace" }
lance-namespace-impls = { version = "=0.40.0-beta.2", path = "./rust/lance-namespace-impls" }
lance-namespace-reqwest-client = "0.0.18"
lance-table = { version = "=0.40.0-beta.2", path = "./rust/lance-table" }
lance-test-macros = { version = "=0.40.0-beta.2", path = "./rust/lance-test-macros" }
lance-testing = { version = "=0.40.0-beta.2", path = "./rust/lance-testing" }
approx = "0.5.1"
# Note that this one does not include pyarrow
arrow = { version = "56.1", optional = false, features = ["prettyprint"] }
arrow-arith = "56.1"
arrow-array = "56.1"
arrow-buffer = "56.1"
arrow-cast = "56.1"
arrow-data = "56.1"
arrow-ipc = { version = "56.1", features = ["zstd"] }
arrow-ord = "56.1"
arrow-row = "56.1"
arrow-schema = "56.1"
arrow-select = "56.1"
async-recursion = "1.0"
async-trait = "0.1"
aws-config = "1.2.0"
aws-credential-types = "1.2.0"
aws-sdk-dynamodb = "1.38.0"
aws-sdk-s3 = "1.38.0"
half = { "version" = "2.1", default-features = false, features = [
    "num-traits",
    "std",
] }
lance-bitpacking = { version = "=0.40.0-beta.2", path = "./rust/compression/bitpacking" }
bitvec = "1"
bytes = "1.4"
byteorder = "1.5"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4.41", default-features = false, features = [
    "std",
    "now",
    "serde",
] }
criterion = { version = "0.5", features = [
    "async",
    "async_tokio",
    "html_reports",
] }
crossbeam-queue = "0.3"
datafusion = { version = "50.0.0", default-features = false, features = [
    "nested_expressions",
    "regex_expressions",
    "unicode_expressions",
    "crypto_expressions",
    "encoding_expressions",
    "datetime_expressions",
    "string_expressions",
] }
datafusion-common = "50.0.0"
datafusion-functions = { version = "50.0.0", features = ["regex_expressions"] }
datafusion-sql = "50.0.0"
datafusion-expr = "50.0.0"
datafusion-ffi = "50.0.0"
datafusion-execution = "50.0.0"
datafusion-optimizer = "50.0.0"
datafusion-physical-expr = "50.0.0"
datafusion-physical-plan = "50.0.0"
datafusion-substrait = "50.0.0"
deepsize = "0.2.0"
dirs = "6.0.0"
either = "1.0"
fst = { version = "0.4.7", features = ["levenshtein"] }
fsst = { version = "=0.40.0-beta.2", path = "./rust/compression/fsst" }
futures = "0.3"
http = "1.1.0"
humantime = "2.2.0"
hyperloglogplus = { version = "0.4.1", features = ["const-loop"] }
itertools = "0.13"
jieba-rs = { version = "0.8.1", default-features = false }
jsonb = { version = "0.5.3", default-features = false, features = ["databend"]}
libm = "0.2.15"
log = "0.4"
mockall = { version = "0.13.1" }
mock_instant = { version = "0.6.0" }
moka = { version = "0.12", features = ["future", "sync"] }
ndarray = { version = "0.16.1", features = ["matrixmultiply-threading"] }
num-traits = "0.2"
object_store = { version = "0.12.3" }
opendal = { version = "0.54" }
object_store_opendal = { version = "0.54" }
pin-project = "1.0"
path_abs = "0.5"
pprof = { version = "0.14.0", features = ["flamegraph", "criterion"] }
proptest = "1.3.1"
prost = "0.13.2"
prost-build = "0.13.2"
prost-types = "0.13.2"
rand = { version = "0.9.1", features = ["small_rng"] }
rand_distr = { version = "0.5.1" }
rand_xoshiro = "0.7.0"
rangemap = { version = "1.0" }
rayon = "1.10"
roaring = "0.10.1"
rstest = "0.23.0"
rustc_version = "0.4"
serde = { version = "^1" }
serde_json = { version = "1" }
semver = "1.0"
shellexpand = "3.0"
snafu = "0.8"
strum = "0.26"
tantivy = { version = "0.24.1", features = ["stopwords"] }
lindera = { version = "0.44.0" }
lindera-tantivy = { version = "0.44.0" }
tempfile = "3"
test-log = { version = "0.2.15" }
tokio = { version = "1.23", features = [
    "rt-multi-thread",
    "macros",
    "fs",
    "sync",
] }
tokio-stream = "0.1.14"
tokio-util = { version = "0.7.10" }
tracing = "0.1"
url = "2.5.7"
uuid = { version = "1.2", features = ["v4", "serde"] }
wiremock = "0.6"
pretty_assertions = "1.4.0"

[profile.bench]
opt-level = 3
debug = true
strip = false

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
fallible_impl_from = "deny"
manual_let_else = "deny"
redundant_pub_crate = "deny"
string_add_assign = "deny"
string_add = "deny"
string_lit_as_bytes = "deny"
string_to_string = "deny"
use_self = "deny"
dbg_macro = "deny"
trait_duplication_in_bounds = "deny"
redundant_clone = "deny"
# We should always use log instead of println
print_stdout = "deny"
print_stderr = "deny"
# not too much we can do to avoid multiple crate versions
multiple-crate-versions = "allow"
# We use Vec<Range<u64>> in a lot of places and it is very common to use a single range in the vec.
single_range_in_vec_init = "allow"
large_futures = "deny"
