[package]
name = "pylance"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
exclude = ["python/lance/conftest.py"]
publish = false

[lib]
name = "lance"
crate-type = ["cdylib"]

[dependencies]
arrow = { workspace = true, features = ["pyarrow"] }
arrow-array.workspace = true
arrow-data.workspace = true
arrow-schema.workspace = true
arrow-select.workspace = true
object_store.workspace = true
datafusion.workspace = true
datafusion-ffi.workspace = true
datafusion-common.workspace = true
async-trait.workspace = true
chrono.workspace = true
env_logger.workspace = true
futures.workspace = true
half.workspace = true
lance = { workspace = true, features = ["tensorflow", "dynamodb", "substrait"] }
lance-arrow.workspace = true
lance-core.workspace = true
lance-datagen = { workspace = true, optional = true }
lance-encoding.workspace = true
lance-file.workspace = true
lance-index = { workspace = true, features = ["tokenizer-lindera", "tokenizer-jieba"] }
lance-io.workspace = true
lance-linalg.workspace = true
lance-table.workspace = true
lance-datafusion.workspace = true
log.workspace = true
prost.workspace = true
pyo3.workspace = true
tokio.workspace = true
uuid.workspace = true
serde_json.workspace = true
serde.workspace = true
serde_yaml.workspace = true
snafu.workspace = true
tracing-chrome.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
url.workspace = true
bytes.workspace = true
once_cell.workspace = true

[features]
datagen = ["lance-datagen"]
fp16kernels = ["lance/fp16kernels"]

[build-dependencies]
prost-build.workspace = true
