[package]
name = "pylance"
version = "0.36.0"
edition = "2021"
authors = ["Lance Devs <dev@lancedb.com>"]
rust-version = "1.80"
exclude = ["python/lance/conftest.py"]
publish = false

[lib]
name = "lance"
crate-type = ["cdylib"]

[dependencies]
arrow = { version = "55.2", features = ["pyarrow"] }
arrow-array = "55.2"
arrow-data = "55.2"
arrow-schema = "55.2"
arrow-select = "55.2"
object_store = "0.12.3"
datafusion = "49.0.2"
datafusion-ffi = "49.0.2"
datafusion-common = "49.0.2"
async-trait = "0.1"
chrono = "0.4.41"
env_logger = "0.11.7"
futures = "0.3"
half = { version = "2.5", default-features = false, features = [
    "num-traits",
    "std",
] }
lance = { path = "../rust/lance", features = [
    "tensorflow",
    "dynamodb",
    "substrait",
] }
lance-arrow = { path = "../rust/lance-arrow" }
lance-core = { path = "../rust/lance-core" }
lance-datagen = { path = "../rust/lance-datagen", optional = true }
lance-encoding = { path = "../rust/lance-encoding" }
lance-file = { path = "../rust/lance-file" }
lance-index = { path = "../rust/lance-index", features = [
    "tokenizer-lindera",
    "tokenizer-jieba",
] }
lance-io = { path = "../rust/lance-io" }
lance-linalg = { path = "../rust/lance-linalg" }
lance-table = { path = "../rust/lance-table" }
lance-datafusion = { path = "../rust/lance-datafusion" }
log = "0.4"
prost = "0.13"
prost-types = "0.13"
pyo3 = { version = "0.24.1", features = [
    "extension-module",
    "abi3-py39",
    "py-clone",
    "chrono",
] }
tokio = { version = "1.23", features = ["rt-multi-thread"] }
uuid = "1.3.0"
roaring = "0.10.1"
serde_json = "1"
serde = "1.0.197"
serde_yaml = "0.9.34"
snafu = "0.8"
tracing-chrome = "0.7.1"
tracing-subscriber = "0.3.17"
tracing = { version = "0.1" }
url = "2.5.0"
bytes = "1.4"
once_cell = "1.21.3"

[features]
datagen = ["lance-datagen"]
fp16kernels = ["lance/fp16kernels"]

[build-dependencies]
prost-build = "0.11"
