[package]
name = "pylance"
version = "0.40.0-beta.2"
edition = "2021"
authors = ["Lance Devs <dev@lancedb.com>"]
rust-version = "1.80"
exclude = ["python/lance/conftest.py"]
publish = false

[lib]
name = "lance"
crate-type = ["cdylib"]

[dependencies]
arrow = { version = "56.1", features = ["pyarrow"] }
arrow-array = "56.1"
arrow-data = "56.1"
arrow-schema = "56.1"
object_store = "0.12.3"
datafusion = "50.0.0"
datafusion-ffi = "50.0.0"
datafusion-common = "50.0.0"
async-trait = "0.1"
chrono = "0.4.41"
env_logger = "0.11.7"
futures = "0.3"
half = { version = "2.5", default-features = false, features = [
    "num-traits",
    "std",
] }
lance = { path = "../rust/lance", features = [
    "tensorflow",
    "dynamodb",
    "substrait",
] }
lance-arrow = { path = "../rust/lance-arrow" }
lance-core = { path = "../rust/lance-core" }
lance-datagen = { path = "../rust/lance-datagen", optional = true }
lance-encoding = { path = "../rust/lance-encoding" }
lance-file = { path = "../rust/lance-file" }
lance-index = { path = "../rust/lance-index", features = [
    "tokenizer-lindera",
    "tokenizer-jieba",
] }
lance-io = { path = "../rust/lance-io" }
lance-linalg = { path = "../rust/lance-linalg" }
lance-namespace = { path = "../rust/lance-namespace" }
lance-namespace-impls = { path = "../rust/lance-namespace-impls" }
lance-table = { path = "../rust/lance-table" }
lance-datafusion = { path = "../rust/lance-datafusion" }
libc = "0.2.176"
log = "0.4"
prost = "0.13"
prost-types = "0.13"
pyo3 = { version = "0.25", features = [
    "extension-module",
    "abi3-py39",
    "py-clone",
    "chrono",
] }
tokio = { version = "1.23", features = ["rt-multi-thread"] }
uuid = "1.3.0"
regex = "1"
roaring = "0.10.1"
serde_json = "1"
serde = "1.0.197"
serde_yaml = "0.9.34"
snafu = "0.8"
tracing-chrome = "0.7.1"
tracing-subscriber = "0.3.17"
tracing = { version = "0.1" }
url = "2.5.0"
bytes = "1.4"

[features]
datagen = ["lance-datagen"]
fp16kernels = ["lance/fp16kernels"]
