[project]
name = "pylance"
dependencies = ["pyarrow>=12", "numpy>=1.22,<2"]
description = "python wrapper for Lance columnar format"
authors = [{ name = "Lance Devs", email = "dev@lancedb.com" }]
license = { file = "LICENSE" }
repository = "https://github.com/eto-ai/lance"
readme = "README.md"
requires-python = ">=3.9"
keywords = [
    "data-format",
    "data-science",
    "machine-learning",
    "arrow",
    "data-analytics",
]
categories = [
    "database-implementations",
    "data-structures",
    "development-tools",
    "science",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering",
]

[tool.maturin]
python-source = "python"

[build-system]
requires = ["maturin>=1.4"]
build-backend = "maturin"

[project.optional-dependencies]
tests = [
    "boto3",
    "datasets",
    "duckdb",
    "ml_dtypes",
    "pillow",
    "pandas",
    "polars[pyarrow,pandas]",
    "pytest",
    "tensorflow",
    "tqdm",
]
dev = ["ruff==0.4.1"]
benchmarks = ["pytest-benchmark"]
torch = ["torch"]
cuvs-py39-cu11 = [
   "cuvs-cu11 @ https://pypi.nvidia.com/cuvs-cu11/cuvs_cu11-24.8.0-cp39-cp39-manylinux_2_28_x86_64.whl",
   "pylibraft-cu11 @ https://pypi.nvidia.com/pylibraft-cu11/pylibraft_cu11-24.8.1-cp39-cp39-manylinux_2_28_x86_64.whl"
]
cuvs-py310-cu11 = [
   "cuvs-cu11 @ https://pypi.nvidia.com/cuvs-cu11/cuvs_cu11-24.8.0-cp310-cp310-manylinux_2_28_x86_64.whl",
   "pylibraft-cu11 @ https://pypi.nvidia.com/pylibraft-cu11/pylibraft_cu11-24.8.1-cp310-cp310-manylinux_2_28_x86_64.whl"
]
cuvs-py311-cu11 = [
   "cuvs-cu11 @ https://pypi.nvidia.com/cuvs-cu11/cuvs_cu11-24.8.0-cp311-cp311-manylinux_2_28_x86_64.whl",
   "pylibraft-cu11 @ https://pypi.nvidia.com/pylibraft-cu11/pylibraft_cu11-24.8.1-cp311-cp311-manylinux_2_28_x86_64.whl"
]
cuvs-py39-cu12 = [
   "cuvs-cu12 @ https://pypi.nvidia.com/cuvs-cu12/cuvs_cu12-24.8.0-cp39-cp39-manylinux_2_28_x86_64.whl",
   "pylibraft-cu12 @ https://pypi.nvidia.com/pylibraft-cu12/pylibraft_cu12-24.8.1-cp39-cp39-manylinux_2_28_x86_64.whl"
]
cuvs-py310-cu12 = [
   "cuvs-cu12 @ https://pypi.nvidia.com/cuvs-cu12/cuvs_cu12-24.8.0-cp310-cp310-manylinux_2_28_x86_64.whl",
   "pylibraft-cu12 @ https://pypi.nvidia.com/pylibraft-cu12/pylibraft_cu12-24.8.1-cp310-cp310-manylinux_2_28_x86_64.whl"
]
cuvs-py311-cu12 = [
   "cuvs-cu12 @ https://pypi.nvidia.com/cuvs-cu12/cuvs_cu12-24.8.0-cp311-cp311-manylinux_2_28_x86_64.whl",
   "pylibraft-cu12 @ https://pypi.nvidia.com/pylibraft-cu12/pylibraft_cu12-24.8.1-cp311-cp311-manylinux_2_28_x86_64.whl"
]
ray = ["ray[data]; python_version<'3.12'"]

[tool.ruff]
lint.select = ["F", "E", "W", "I", "G", "TCH", "PERF", "B019"]

[tool.ruff.lint.per-file-ignores]
"*.pyi" = ["E301", "E302"]

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pytest.ini_options]
markers = [
    "cuda: tests which rely on having a CUDA-capable GPU",
    "integration: mark test to run only on named environment",
    "gpu: tests which rely on pytorch and some kind of gpu",
    "slow",
    "torch: tests which rely on pytorch being installed",
]
filterwarnings = [
    'error::FutureWarning',
    'error::DeprecationWarning',
    # Boto3
    'ignore:.*datetime\.datetime\.utcnow\(\) is deprecated.*:DeprecationWarning',
    # Pandas 2.2 on Python 2.12
    'ignore:.*datetime\.datetime\.utcfromtimestamp\(\) is deprecated.*:DeprecationWarning',
    # Pytorch 2.2 on Python 2.12
    'ignore:.*is deprecated and will be removed in Python 3\.14.*:DeprecationWarning',
    'ignore:.*The distutils package is deprecated.*:DeprecationWarning',
]
